<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd"
         xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">

  <modelVersion>4.0.0</modelVersion>

  <groupId>org.lbogdanov.mvp</groupId>
  <artifactId>mvp</artifactId>
  <version>0.1</version>

  <name>MVP</name>

  <properties>
    <javafx.version>16</javafx.version>
    <kotlin.version>1.7.10</kotlin.version>

    <mainClass>mvp.AppKt</mainClass>

    <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
    <maven.compiler.release>17</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
    <dependency>
      <groupId>com.jfoenix</groupId>
      <artifactId>jfoenix</artifactId>
      <version>9.0.10</version>
    </dependency>
    <dependency>
      <groupId>net.java.dev.jna</groupId>
      <artifactId>jna-jpms</artifactId>
      <version>5.9.0</version>
    </dependency>
    <dependency>
      <groupId>org.jetbrains.kotlin</groupId>
      <artifactId>kotlin-stdlib-jdk8</artifactId>
      <version>${kotlin.version}</version>
      <exclusions>
        <exclusion>
          <groupId>org.jetbrains</groupId>
          <artifactId>annotations</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>${javafx.version}</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-fxml</artifactId>
      <version>${javafx.version}</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.jetbrains.kotlin</groupId>
        <artifactId>kotlin-maven-plugin</artifactId>
        <version>${kotlin.version}</version>
        <executions>
          <execution>
            <goals>
              <goal>compile</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <jvmTarget>${maven.compiler.release}</jvmTarget>
          <sourceDirs>
            <sourceDirectory>src/main/kotlin</sourceDirectory>
          </sourceDirs>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <executions>
          <execution>
            <id>default-compile</id>
            <phase>none</phase>
          </execution>
          <execution>
            <id>default-testCompile</id>
            <phase>none</phase>
          </execution>
          <execution>
            <id>java-compile</id>
            <phase>compile</phase>
            <goals>
              <goal>compile</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-maven-plugin</artifactId>
        <version>0.0.6</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>jlink</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <compress>2</compress>
          <jmodsPath>${project.build.directory}/modules</jmodsPath>
          <launcher>mvp</launcher>
          <mainClass>${mainClass}</mainClass>
          <noHeaderFiles>true</noHeaderFiles>
          <noManPages>true</noManPages>
          <stripDebug>true</stripDebug>
          <options>
            <option>--add-opens</option>
            <option>java.base/java.lang.reflect=com.jfoenix</option>
            <option>--add-opens</option>
            <option>javafx.base/com.sun.javafx.event=com.jfoenix</option>
          </options>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
